--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,15 +1,17 @@
 body {
-    background-image: url("https://llandscapes-ee1.kxcdn.com/wp-content/uploads/2016/07/rocky-mountain-national-park.jpg");
-    height: 100%;
-    width: 100%;
+    background-image: url("https://newsdeeply.imgix.net/20170907044141/15927847315_01a4796f82_o.jpg?w=640&fit=max&q=60");
+    background-size: 25%;
+    background-repeat: repeat;
+
+    
 }
 
 .container {
     background-color: azure;
-    padding-bottom:50px;
+    /* padding-bottom:50px;
     padding-left:200px;
     padding-right:200px;
-    padding-top:50px; 
+    padding-top:50px;  */
     align-content: center;
     text-align: center;
 
