--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,12 +1,41 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    color:black;
-
+    color:#BC4749;
+    background-color: #1D3354;
 }
 
-.jumbotron {
-    background-image: url("https://newsdeeply.imgix.net/20170907044141/15927847315_01a4796f82_o.jpg?w=640&fit=max&q=60");
+.h1, h1 {
+    font-size: 2.5rem;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-top: 0;
+    display: block;
 }
 
+.lead {
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.btn {
+    background-color: #f9db6d;
+    color: #1d3354;
+
+}
 .container {
     background-color: azure;
     /* padding-bottom:50px;
@@ -17,6 +46,12 @@ body {
     text-align: center;
 
 
+}
+ footer {
+     display: block;
+ }
+.mt-auto{
+    margin-top:auto!important;
 }
 
 #button {
